@@ -1,4 +1,4 @@
-$Id: History,v 1.10 2000-06-01 03:19:10 kurasige Exp $
+$Id: History,v 1.11 2000-06-02 05:26:25 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+June 2, 00 M.Asai
+- Add SetUserTrackInformation(G4VUserTrackInformation*) to
+ G4TrackingManager
+
 Hune 1, 00 H.Kurashige
 - Add "const" to all G4VTouchable pointer
 
